// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Answer Editor should render TextArea 1`] = `
<CollectionListEditor__Answer
  aria-label="TextArea answer"
  data-test="answer-editor"
>
  <CollectionListEditor__AnswerHeader>
    <CollectionListEditor__AnswerTypePanel>
      <CollectionListEditor__AnswerType
        data-test="list-name"
      >
        LIST NAME
      </CollectionListEditor__AnswerType>
      <CollectionListEditor__Buttons>
        <Tooltip
          content="Move answer up"
          offset={
            Object {
              "bottom": 10,
              "top": 0,
            }
          }
          place="top"
        >
          <MoveButton
            aria-label="Move answer up"
            color="white"
            data-test="btn-move-answer-up"
            disabled={false}
            onClick={[MockFunction]}
          >
            <Component />
          </MoveButton>
        </Tooltip>
        <Tooltip
          content="Move answer down"
          offset={
            Object {
              "bottom": 10,
              "top": 0,
            }
          }
          place="top"
        >
          <MoveButton
            aria-label="Move answer down"
            color="white"
            data-test="btn-move-answer-down"
            disabled={false}
            onClick={[MockFunction]}
          >
            <Component />
          </MoveButton>
        </Tooltip>
        <Tooltip
          content="Delete answer"
          offset={
            Object {
              "bottom": 10,
              "top": 0,
            }
          }
          place="top"
        >
          <DeleteButton
            aria-label="Delete answer"
            color="white"
            data-test="btn-delete-answer"
            onClick={[Function]}
            size="medium"
            type="button"
          />
        </Tooltip>
      </CollectionListEditor__Buttons>
    </CollectionListEditor__AnswerTypePanel>
  </CollectionListEditor__AnswerHeader>
  <CollectionListEditor__Padding>
    <withValidationError(Connect(withEntityEditor(StatelessBasicAnswer)))
      answer={
        Object {
          "advancedProperties": false,
          "description": "",
          "displayName": "",
          "guidance": "",
          "id": "1",
          "label": "",
          "properties": Object {},
          "qCode": "",
          "secondaryLabel": "",
          "secondaryLabelDefault": "",
          "title": "",
          "type": "TextArea",
        }
      }
      canMoveDown={true}
      canMoveUp={true}
      enableValidationMessage={true}
      onChange={[MockFunction]}
      onDeleteCollectionList={[MockFunction]}
      onMoveDown={[MockFunction]}
      onMoveUp={[MockFunction]}
      onUpdate={[MockFunction]}
      type="TextArea"
    />
  </CollectionListEditor__Padding>
</CollectionListEditor__Answer>
`;

exports[`Answer Editor should render TextField 1`] = `
<CollectionListEditor__Answer
  aria-label="TextField answer"
  data-test="answer-editor"
>
  <CollectionListEditor__AnswerHeader>
    <CollectionListEditor__AnswerTypePanel>
      <CollectionListEditor__AnswerType
        data-test="list-name"
      >
        LIST NAME
      </CollectionListEditor__AnswerType>
      <CollectionListEditor__Buttons>
        <Tooltip
          content="Move answer up"
          offset={
            Object {
              "bottom": 10,
              "top": 0,
            }
          }
          place="top"
        >
          <MoveButton
            aria-label="Move answer up"
            color="white"
            data-test="btn-move-answer-up"
            disabled={false}
            onClick={[MockFunction]}
          >
            <Component />
          </MoveButton>
        </Tooltip>
        <Tooltip
          content="Move answer down"
          offset={
            Object {
              "bottom": 10,
              "top": 0,
            }
          }
          place="top"
        >
          <MoveButton
            aria-label="Move answer down"
            color="white"
            data-test="btn-move-answer-down"
            disabled={false}
            onClick={[MockFunction]}
          >
            <Component />
          </MoveButton>
        </Tooltip>
        <Tooltip
          content="Delete answer"
          offset={
            Object {
              "bottom": 10,
              "top": 0,
            }
          }
          place="top"
        >
          <DeleteButton
            aria-label="Delete answer"
            color="white"
            data-test="btn-delete-answer"
            onClick={[Function]}
            size="medium"
            type="button"
          />
        </Tooltip>
      </CollectionListEditor__Buttons>
    </CollectionListEditor__AnswerTypePanel>
  </CollectionListEditor__AnswerHeader>
  <CollectionListEditor__Padding>
    <withValidationError(Connect(withEntityEditor(StatelessBasicAnswer)))
      answer={
        Object {
          "advancedProperties": false,
          "description": "",
          "displayName": "",
          "guidance": "",
          "id": "1",
          "label": "",
          "properties": Object {},
          "qCode": "",
          "secondaryLabel": "",
          "secondaryLabelDefault": "",
          "title": "",
          "type": "TextField",
        }
      }
      canMoveDown={true}
      canMoveUp={true}
      enableValidationMessage={true}
      onChange={[MockFunction]}
      onDeleteCollectionList={[MockFunction]}
      onMoveDown={[MockFunction]}
      onMoveUp={[MockFunction]}
      onUpdate={[MockFunction]}
      type="TextField"
    />
  </CollectionListEditor__Padding>
</CollectionListEditor__Answer>
`;
